ecmascript/parser/tests/typescript-errors/tsc/es6/yieldExpressions/YieldExpression2_es6/input.ts.stderr
error: 'implements', 'interface', 'let', 'package', 'private', 'protected',  'public', 'static', or 'yield' cannot be used as an identifier in strict mode
 --> $DIR/tests/typescript-errors/tsc/es6/yieldExpressions/YieldExpression2_es6/input.ts:2:1
  |
2 | yield foo;
  | ^^^^^

error: Expected ';', '}' or <eof>
 --> $DIR/tests/typescript-errors/tsc/es6/yieldExpressions/YieldExpression2_es6/input.ts:2:7
  |
2 | yield foo;
  |       ^^^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/typescript-errors/tsc/es6/yieldExpressions/YieldExpression2_es6/input.ts:2:1
  |
2 | yield foo;
  | ^^^^^

